# enigmac

./: .gitignore  CMakeLists.txt  main.cpp
src/: Crack.cpp  Crack.h  Result.cpp  Result.h  ResultContainer.cpp  ResultContainer.h  Settings.cpp  Settings.h  SettingsIterator.cpp  SettingsIterator.h  Sinkov.cpp  Sinkov.h  english_bigrams.csv  enigma.cpp  enigma.h  sinkov.cpp  utils.h
src/multi/: multi.h  worker.cpp  worker.h  worker_p.cpp  worker_p.h  worker_r.cpp  worker_r.h
test/: enigma.cpp
test/catch2/: catch.hpp
